--- a/style.css
+++ b/style.css
@@ -44,3 +44,29 @@ a:link {
     font-weight: 700;
     margin-top: 1em;
 }
+#Replit {
+    font-family: Roboto;
+    margin-top: 1em;
+    display: inline-block;
+}
+#uptmrobot {
+    font-family: Roboto;
+    font-weight: 700;
+}
+#dscrd {
+    font-family: Roboto;
+    font-weight: 700;
+}
+#replt {
+    font-family: Roboto;
+    font-weight: 700;
+}
+#Github {
+    font-family: Roboto;
+    margin-top: 1em;
+    display: inline-block;
+}
+#githb {
+    font-family: Roboto;
+    font-weight: 700;
+}
