--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-    max-width: 1920px;
+    max-width: 40em;
     width: auto;
-    max-height: 1080px;
+    max-height: 22.5em;
     height: auto;
     background-image: url(https://i.ibb.co/q1DWPhj/Color-Template.png);
     background-size: cover;
@@ -9,7 +9,7 @@ body {
 #sitetitle {
     text-decoration-line: underline;
     text-decoration-style: solid;
-    text-decoration-thickness: 5px;
+    text-decoration-thickness: 0.1em;
     font-family: Roboto;
     font-weight: bold;
     font-size: 3em;
@@ -36,8 +36,9 @@ a:link {
     color: black;
 }
 #discord_widget {
-    margin-top: 10.4em;
-    margin-left: 4px;
+    margin-top: 7em;
+    margin-left: 96.8em;
+    z-index: 100;
 }
 #welcome_msg {
     font-family: Roboto;
