--- a/style.css
+++ b/style.css
@@ -36,9 +36,10 @@ a:link {
     color: black;
 }
 #discord_widget {
-    margin-top: 7em;
+    margin-top: 5em;
     margin-left: 4px;
     z-index: -1;
+    display: inline-block;
 }
 #welcome_msg {
     font-family: Roboto;
