--- a/printsheet.css
+++ b/printsheet.css
@@ -1,34 +1,34 @@
 body {
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: #0e1e38;
     overflow-x: hidden;
 }
 #sitetitle {
     text-decoration-line: underline;
     text-decoration-style: solid;
     text-decoration-thickness: 0.1em;
-    font-family: Helvetica;
+    font-family: "Fira Code";
     font-weight: bold;
     font-size: 3em;
     padding: 3%;
     padding-bottom: 3%;
     padding-left: 30%;
     padding-right: 30%;
-    background: #464646;
+    background: #0e1e38;
     overflow: clip;
-    color: white;
+    color: #ffffff;
     text-align: center;
 }
 .waves {
-    fill: #464646;
+    fill: #0e1e38;
     width: 160%;
     height: 145px;
     overflow: visible;
     margin-left: 60%;
 }
 .wavesupside {
-    fill: #464646;
+    fill: #0e1e38;
     width: 160%;
     height: 145px;
     margin-left: -60%;
@@ -45,13 +45,13 @@ body {
 #Uptime {
     margin-top: 2em;
     display: inline-block;
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-weight: 500;
 }
 #Discord {
     margin-top: 1em;
     display: inline-block;
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-weight: 500;
 }
 a:visited {
@@ -65,53 +65,53 @@ a:link {
     margin-top: 4em;
 }
 #welcome_msg {
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-weight: 700;
     margin-top: 1em;
     word-wrap: normal;
 }
 #Replit {
-    font-family: Helvetica;
+    font-family: Montserrat;
     margin-top: 1em;
     font-weight: 500;
     display: inline-block;
 }
 #uptmrobot {
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-weight: 700;
 }
 #dscrd {
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-weight: 700;
 }
 #replt {
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-weight: 700;
 }
 #Github {
-    font-family: Helvetica;
+    font-family: Montserrat;
     margin-top: 1em;
     display: inline-block;
     font-weight: 500;
 }
 #githb {
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-weight: 700;
 }
 #dcs {
     margin-top: 1em;
     display: inline-block;
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-weight: 700;
 }
 #doocs {
     display: inline-block;
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-weight: 500;
     
 }
 #big-dc {
-    font-family: Helvetica;
+    font-family: "Fira Code";
     font-weight: bold;
     font-size: 2em;
     text-decoration: underline;
