--- a/printsheet.css
+++ b/printsheet.css
@@ -1,34 +1,35 @@
 body {
     width: 100%;
-    height: 100%;
-    background-color: #0e1e38;
+    height: auto;
+    background-image: url('https://i.ibb.co/SRWL57K/Color-Template-2.webp');/*#0e1e38*/
+    background-size: cover;
     overflow-x: hidden;
 }
 #sitetitle {
-    text-decoration-line: underline;
-    text-decoration-style: solid;
+    /* text-decoration-line: underline;
+    text-decoration-style: solid; */
     text-decoration-thickness: 0.1em;
-    font-family: "Fira Code";
-    font-weight: bold;
-    font-size: 3em;
+    font-family: "Ubuntu";
+    font-weight: 700;
+    font-size: 4em;
     padding: 3%;
-    padding-bottom: 3%;
+    padding-bottom: 3.5%;
     padding-left: 30%;
     padding-right: 30%;
-    background: #0e1e38;
+    background: #A40058;
     overflow: clip;
-    color: #ffffff;
-    text-align: center;
+    color: white;
+    text-align: center
 }
 .waves {
-    fill: #0e1e38;
+    fill: #A40058;
     width: 160%;
     height: 145px;
     overflow: visible;
     margin-left: 60%;
 }
 .wavesupside {
-    fill: #0e1e38;
+    fill: #A40058;
     width: 160%;
     height: 145px;
     margin-left: -60%;
@@ -40,82 +41,88 @@ body {
     grid-column-start: 1;
     grid-column-end: 3;
     place-items: center;
-    color: black;
+    color: white;
 }
 #Uptime {
     margin-top: 2em;
     display: inline-block;
-    font-family: Montserrat;
+    font-family: Ubuntu;
     font-weight: 500;
 }
 #Discord {
     margin-top: 1em;
     display: inline-block;
-    font-family: Montserrat;
+    font-family: Ubuntu;
     font-weight: 500;
 }
 a:visited {
-    color: black;
+    color: white;
 }
 a:link {
-    color: black;
+    color: white;
 }
 #discord_widget {
     display: inline-block;
     margin-top: 4em;
 }
 #welcome_msg {
-    font-family: Montserrat;
+    font-family: Ubuntu;
     font-weight: 700;
+    font-size: 1.5em;
     margin-top: 1em;
     word-wrap: normal;
 }
 #Replit {
-    font-family: Montserrat;
+    font-family: Ubuntu;
     margin-top: 1em;
     font-weight: 500;
     display: inline-block;
 }
 #uptmrobot {
-    font-family: Montserrat;
+    font-family: Ubuntu;
     font-weight: 700;
+    font-size: 1.5em;
 }
 #dscrd {
-    font-family: Montserrat;
+    font-family: Ubuntu;
     font-weight: 700;
+    font-size: 1.5em
 }
 #replt {
-    font-family: Montserrat;
+    font-family: Ubuntu;
     font-weight: 700;
+    font-size: 1.5em
 }
 #Github {
-    font-family: Montserrat;
+    font-family: Ubuntu;
     margin-top: 1em;
     display: inline-block;
     font-weight: 500;
 }
 #githb {
-    font-family: Montserrat;
+    font-family: Ubuntu;
     font-weight: 700;
+    font-size: 1.5em;
 }
 #dcs {
     margin-top: 1em;
     display: inline-block;
-    font-family: Montserrat;
+    font-family: Ubuntu;
     font-weight: 700;
+    font-size: 1.5em;
 }
 #doocs {
     display: inline-block;
-    font-family: Montserrat;
+    font-family: Ubuntu;
     font-weight: 500;
     
 }
 #big-dc {
-    font-family: "Fira Code";
-    font-weight: bold;
-    font-size: 2em;
-    text-decoration: underline;
+    font-family: "Ubuntu";
+    font-weight: 700;
+    font-size: 1.5em;
+    font-size: 3em;
 }
 #lastwave {
-    display: hidden;
+    margin-top: 2%;
 }
