--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ a:link {
 }
 #dcs {
     margin-top: 1em;
+    margin-bottom: 1em;
     display: inline-block;
     font-family: Ubuntu;
     font-weight: 700;
@@ -115,6 +116,7 @@ a:link {
     display: inline-block;
     font-family: Ubuntu;
     font-weight: 500;
+    margin-bottom: 1em;
     
 }
 #big-dc {
