--- a/style.css
+++ b/style.css
@@ -43,18 +43,6 @@ body {
     place-items: center;
     color: white;
 }
-#Uptime {
-    margin-top: 2em;
-    display: inline-block;
-    font-family: Ubuntu;
-    font-weight: 500;
-}
-#Discord {
-    margin-top: 1em;
-    display: inline-block;
-    font-family: Ubuntu;
-    font-weight: 500;
-}
 a:visited {
     color: white;
 }
@@ -65,66 +53,31 @@ a:link {
     display: inline-block;
     margin-top: 4em;
 }
-#welcome_msg {
+#welcome_message {
     font-family: Ubuntu;
     font-weight: 700;
     font-size: 1.5em;
     margin-top: 1em;
     word-wrap: normal;
 }
-#Replit {
-    font-family: Ubuntu;
-    margin-top: 1em;
-    font-weight: 500;
-    display: inline-block;
-}
-#uptmrobot {
-    font-family: Ubuntu;
-    font-weight: 700;
-    font-size: 1.5em;
-}
-#dscrd {
-    font-family: Ubuntu;
-    font-weight: 700;
-    font-size: 1.5em
-}
-#replt {
-    font-family: Ubuntu;
-    font-weight: 700;
-    font-size: 1.5em
-}
-#Github {
-    font-family: Ubuntu;
-    margin-top: 1em;
-    display: inline-block;
-    font-weight: 500;
-}
-#githb {
-    font-family: Ubuntu;
-    font-weight: 700;
-    font-size: 1.5em;
-}
-#dcs {
-    margin-top: 1em;
-    margin-bottom: 1em;
-    display: inline-block;
-    font-family: Ubuntu;
-    font-weight: 700;
-    font-size: 1.5em;
-}
-#doocs {
-    display: inline-block;
-    font-family: Ubuntu;
-    font-weight: 500;
-    margin-bottom: 1em;
-    
-}
-#big-dc {
+#big_Discord {
     font-family: "Ubuntu";
     font-weight: 700;
-    font-size: 1.5em;
     font-size: 3em;
+    margin-bottom: -0.5em;
 }
 #lastwave {
     margin-top: 2%;
+}
+.mediumtext {
+    display: inline-block;
+    font-family: Ubuntu;
+    font-weight: 700;
+    font-size: 1.5em;
+    margin-top: 1em;
+}
+.mediumlink {
+    display: inline-block;
+    font-family: "Ubuntu";
+    font-weight: 500;
 }
