--- a/style.css
+++ b/style.css
@@ -28,23 +28,7 @@ body {
     margin: 0;
     height: auto;
 }
-notice {
-    position: fixed;
-    background-color: #30aec4a9;
-    font-family: "Poppins", system-ui, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 2rem;
-    width: 100%;
-    > button {
-        border: none;
-        background: none;
-        cursor: pointer;
-    }
-}
 pageHead {
-    margin-top: 2rem;
     position: fixed;
     font-family: "Poppins", system-ui, sans-serif;
     display: block;
@@ -104,18 +88,6 @@ h1, h2, h3 {
     text-decoration: underline;
     font-family: "Poppins", system-ui, sans-serif;
 }
-#lightswitch, #darkswitch {
-    height: 1rem;
-    padding: 1rem;
-    background: rgba(0, 0, 0, 0);
-    border: none;
-    justify-content: center;
-    align-items: center;
-}
-#bulb {
-    width: 2rem;
-    height: 2rem;
-}
 .mobileOnly {
     display: none;
 }
@@ -143,7 +115,7 @@ imageDivision {
 }
 #blogImage {
     aspect-ratio: initial;
-    scale: 2;
+    scale: 1.75;
 }
 textDivision {
     display: grid;
@@ -164,4 +136,20 @@ textDivision {
     font-weight: 700;
     font-family: "Poppins", system-ui, sans-serif;
     cursor: pointer;
+}
+@media (prefers-color-scheme: dark) {
+    :root {
+        font-family: "Roboto Flex", system-ui, -apple-system, sans-serif;
+        color: white;
+    }
+    body {
+        background: #2c2c2c;
+    }
+    pageHead {
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), linear-gradient(126deg, #367AFF 0%, #6803B7 43.75%, #44007A 100%);
+        box-shadow: 0px 0px 5px 0px #FFFFFF00;
+    }
+    tools, docs, home, blog {
+        color: white;
+    }
 }
