--- a/styles/blog.style.css
+++ b/styles/blog.style.css
@@ -5,7 +5,7 @@ h2 {
 articles {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 18rem);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     margin-left: 12rem;
@@ -13,34 +13,48 @@ articles {
     gap: 4rem;
     justify-content: left;
 }
-
-art1 {
+art[id^="art"] {
+    border: 2px solid whitesmoke;
+    overflow: hidden;
+    blrr {
+        display: block;
+        position: relative;
+        z-index: 5;
+        margin-bottom: 0;
+        height: 1.25rem;
+        border: 1px dashed red;
+        background: linear-gradient(#ffffff00, blur(15px))
+    }
+}
+art[class^="article-sec view"] {
+    overflow-y: scroll;
+    
+}
+#art1 {
     grid-area: 1 / 1 / 2 / 3;
-    border: 2px solid white;
 }
 
-art2 {
+#art2 {
     grid-area: 1 / 3 / 2 / 4;
-    border: 2px solid white;
 }
-
-art3 {
+#art3 {
     grid-area: 2 / 1 / 3 / 2;
-    border: 2px solid white;
 }
 
-art4 {
+#art4 {
     grid-area: 2 / 2 / 3 / 4;
-    border: 2px solid white;
 }
 .view {
     position: absolute;
     z-index: 1;
     display: inline-block;
     justify-self: center;
-    height: 72rem;
-    width: 80%;
+    height: 70%;
+    width: 90%;
     background: #eeeeee;
     color: #000000;
     border-radius: 25px;
+    backdrop-filter: blur(25px);
+    user-select: none;
+    overflow: visible;
 }
