--- a/styles/tools.style.css
+++ b/styles/tools.style.css
@@ -1,33 +1,59 @@
+HTML CSS JSResult Skip Results Iframe
+EDIT ON
+button{
+    border: none;
+    cursor: pointer;
+    color: white;
+    background: none;
+    transition: all .3s ease-in-out;
+}
+
+.container {
+  width: 100%;
+  height: 24rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+}
+
+.carousel-view {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  padding: 44px 0;
+  transition: all 0.25s ease-in;
+}
+
+.carousel-view .item-list {
+  max-width: 950px;
+  width: 24rem;
+  padding: 50px 10px;
+  display: flex;
+  gap: 48px;
+  scroll-behavior: smooth;
+  transition: all 0.25s ease-in;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+  overflow: auto;
+  scroll-snap-type: x mandatory;
+}
+
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.item-list::-webkit-scrollbar {
+  display: none;
+}
+#next-btn #prev-btn {
+  cursor: pointer;
+}
+.item {
+  scroll-snap-align: center;
+  min-width: 24rem;
+  height: auto;
+  border-radius:15px;
+}
 img {
-    height: 12rem;
-    justify-self: center;
-}
-.material-symbols-outlined {
-    display: grid;
-}
-carr {
-    display: grid;
-    grid-template-columns: 1fr 32rem 1fr;
-    align-items: center;
-    margin-top: 3rem;
-    >left {
-        display: grid;
-        justify-content: center;
-        grid-column: 1;
-    }
-    >div {
-        display: grid;
-        grid-column: 2;
-        overflow-y: scroll;
-        grid-template-rows: 1fr 1fr 1fr;
-        flex-direction: row;
-        >text>p {
-            text-align: center;
-        }
-    }
-    >right {
-        grid-column: 3;
-        display: grid;
-        justify-content: center;
-    }
+  width: 24rem;
 }
