--- a/styles/input.css
+++ b/styles/input.css
@@ -22,6 +22,9 @@ e.material-symbols-outlined {
     @apply p-4 no-underline;
 }
 box {
-    @apply md:grid md:grid-cols-[1fr_5fr] md:w-4/5 md:mb-12 
+    @apply md:grid md:grid-cols-[1fr_5fr] md:w-4/5 md:mb-12;
+}
+.carrousel {
+    @apply border-2 border-slate-500 min-w-72 snap-center mx-4 rounded-lg;
 }
 }
